nys-93: fix manage dashboard z-index issue

--- a/web/themes/custom/nysenate_theme/src/patterns/pages/manage-dashboard/manage-dashboard.scss
+++ b/web/themes/custom/nysenate_theme/src/patterns/pages/manage-dashboard/manage-dashboard.scss
@@ -161,7 +161,7 @@ form.nys-dashboard-manage-dashboard {
     border: 0;
     text-align: center;
     box-shadow: none;
-    z-index: 100;
+    z-index: 601;
 
     &:not(.ui-dialog-off-canvas) {
       background: white;
@@ -273,6 +273,6 @@ form.nys-dashboard-manage-dashboard {
   .ui-widget-overlay {
     opacity: .6;
     background: black;
-    z-index: 99;
+    z-index: 600;
   }
 }
